Change column title from 'Monto Total' to 'Monto' in sales.html

--- a/templates/sales.html
+++ b/templates/sales.html
@@ -63,7 +63,7 @@
     <thead>
         <tr>
             <th>Cliente</th>
-            <th>Monto Total</th>
+            <th>Monto</th>
             <th>Fecha Sorteo</th>
             <th>Acciones</th>
         </tr>
