Add pagos_ganadores.html and link it in seller dashboard

--- a/templates/seller_dashboard.html
+++ b/templates/seller_dashboard.html
@@ -10,6 +10,7 @@
         <a href="{{ url_for('my_commissions') }}" class="dashboard-item">Mis Comisiones</a>
         <a href="{{ url_for('list_clients') }}" class="dashboard-item">Mis Clientes</a>
         <a href="{{ url_for('list_winners') }}" class="dashboard-item">Ver Ganadores</a>
+        <a href="{{ url_for('winner_payments') }}" class="dashboard-item">Pagos a Ganadores</a>
     </div>
 </div>
 {% endblock %}
