--- a/templates/winners.html
+++ b/templates/winners.html
@@ -38,10 +38,10 @@
             <tr>
                 <th>Cliente</th>
                 {% if session['user_role'] == 'admin' %}<th>Vendedor</th>{% endif %}
-                <th>Número Ganador</th>
-                <th>Tipo de Premio</th>
-                <th>Cantidad Jugada</th>
-                <th>Total a Pagar</th>
+                <th>Número</th>
+                <th>Premio</th>
+                <th>Cant</th>
+                <th>Pago</th>
             </tr>
         </thead>
         <tbody>
