--- a/templates/sale_detail.html
+++ b/templates/sale_detail.html
@@ -42,6 +42,7 @@
     </div>
 
     <a href="{{ url_for('list_sales') }}" class="btn-back">Volver a Ventas</a>
+    <a href="{{ url_for('print_invoice', invoice_id=invoice['id']) }}" target="_blank" class="btn">Imprimir</a>
 </div>
 
 <style>
