--- a/appfordomain/templates/layout.html
+++ b/appfordomain/templates/layout.html
@@ -12,8 +12,9 @@
         <a href="{{ url_for('index') }}" class="navbar-brand">LotoWeb</a>
         {% if 'user_id' in session %}
             <div class="navbar-menu">
-                <span class="navbar-item">Usuario: {{ session['username'] }} ({{ session['user_role'] }})</span>
-                <a href="{{ url_for('logout') }}" class="navbar-item">Cerrar Sesión</a>
+                <div class="navbar-actions">
+                    <a href="{{ url_for('logout') }}" class="navbar-item">Cerrar Sesión</a>
+                </div>
             </div>
         {% endif %}
     </nav>
