UI: shorten auth link text (Contraseña/Salir) and tighten mobile header spacing

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,8 +16,8 @@
         {% if 'user_id' in session %}
             <div class="navbar-menu">
                 <div class="navbar-actions">
-                    <a href="{{ url_for('change_password') }}" class="navbar-item">Cambiar Contraseña</a>
-                    <a href="{{ url_for('logout') }}" class="navbar-item">Cerrar Sesión</a>
+                    <a href="{{ url_for('change_password') }}" class="navbar-item">Contraseña</a>
+                    <a href="{{ url_for('logout') }}" class="navbar-item">Salir</a>
                 </div>
             </div>
         {% endif %}
