--- a/appfordomain/templates/layout.html
+++ b/appfordomain/templates/layout.html
@@ -13,7 +13,7 @@
         {% if 'user_id' in session %}
             <div class="navbar-menu">
                 <div class="navbar-actions">
-                    <a href="{{ url_for('logout') }}" class="navbar-item">Cerrar Sesión</a>
+                    <a href="{{ url_for('logout') }}" class="navbar-item">Salir</a>
                 </div>
             </div>
         {% endif %}
