feat(sales): add admin-only 'Vendedor' column and rename 'Fecha Sorteo' -> 'Sorteo'

--- a/appfordomain/templates/sales.html
+++ b/appfordomain/templates/sales.html
@@ -14,7 +14,7 @@
     <thead>
         <tr>
             <th>Cód. Factura</th>
-            <th>Fecha Sorteo</th>
+            <th>Sorteo</th>
             <th>Cliente</th>
             {% if session['user_role'] == 'admin' %}
             <th>Vendedor</th>
