--- a/appfordomain/templates/commissions.html
+++ b/appfordomain/templates/commissions.html
@@ -40,7 +40,7 @@
     <thead>
         <tr>
             <th>Vendedor</th>
-            <th>Fecha Sorteo</th>
+            <th>Sorteo</th>
             <th>Ventas Totales</th>
             <th>Comisiones</th>
             <th>Premios Pagados</th>
